updated pair programming for virtual/Zoom

--- a/_posts/2021-01-28-04_Python_2.md
+++ b/_posts/2021-01-28-04_Python_2.md
@@ -327,17 +327,21 @@ print("Congratulations, you guessed the number", number, "in", n_guesses, "guess
      [pair programming](https://guide.agilealliance.org/guide/pairing.html)
      (borrowed from
      agile/[extreme programming](http://www.extremeprogramming.org/))
+
+     Each of the two programmers takes on one of the following roles:
+     - **driver**: has keyboard & types, runs the code
+     - **navigator** reads code, provides directions, catches bugs
+
+     *Both* constantly talk to each other: comment on what you're
+     typing, comment on what is being typed. Roles are not static but
+     are supposed to be switched frequently.
+
          
      1. Split into teams of 2. (Be nice. Introduce yourselves.) 
-     2. Sit next to each other at one desk.
-     3. Decide whose laptop you are going to use.
-     4. [Flip a coin](https://www.random.org/coins/?num=1&cur=60-usd.0100c-washington)
+     2. <strike>Sit next to each other at one desk.</strike> Share a Zoom Breakout room
+     3. [Flip a coin](https://www.random.org/coins/?num=1&cur=60-usd.0100c-washington)
         to decide who will start out as the *navigator* and who will
-        be the *driver*.            
-     5. Roles:
-            - *driver*: keyboard & types
-            - *navigator* reads code, provides directions, catches bugs
-            - *Both* constantly talk to each other: comment on what you're
-              typing, comment on what is being typed                
-     6. Switch roles every ~5 minutes
+        be the *driver*.     
+     4. <strike>Decide whose laptop you are going to use.</strike> The *driver* will share their screen and type and run code.
+     5. <strike>Switch roles every ~5 minutes</strike> Maintain roles for one exercise (or switch if feasible, e.g., if you can quickly exchange code via a remote repository)
 
