fixed: list insertion example

--- a/_posts/2021-01-28-04_Python_1.md
+++ b/_posts/2021-01-28-04_Python_1.md
@@ -435,9 +435,10 @@ print(stuff)
 
 gives `['dog', 'python', 'parrot', 'llama', 'swallow', 'cat', 'Hund', 'Python', 'Schwalbe', 'Katze']`.
 
-Alternatively (and more clearly), use
+As a more explicit alternative to `stuff[2:2] = ['parrot', 'llama']` one can use
 {% highlight python %}
-stuff.insert(2, ['parrot', 'llama'])
+stuff.insert(2, 'parrot')
+stuff.insert(3, 'llama')
 {% endhighlight %}
 
 
