add link to Activity 04

--- a/_posts/2021-01-28-04_Python_1.md
+++ b/_posts/2021-01-28-04_Python_1.md
@@ -242,6 +242,10 @@ $$
 T = \frac{5}{9} (\theta - 32) + 273.15
 $$
 
+For **Activity 04** [^3], write a program `tempconverter.py` that
+takes as input the temperature in Fahrenheit $$\theta$$ and outputs
+$$T$$.
+
 
 ## Container data types
 *Lists* ("arrays") and *tuples* are
@@ -383,6 +387,8 @@ letters[1::2] == ['B', 'D', 'F']
 
 ##### Activity: extracting from lists
 
+Part of this activity is also part of **Activity 04** [^3]:
+
 1. extract the letter 'E' from `letters` 
 1. extract the letter 'E' from `letters` (in a different way)
 1. extract the letters 'C', 'D' from letters
@@ -404,7 +410,7 @@ letters[1::2] == ['B', 'D', 'F']
 #### List construction
 Lists are
 [mutable](https://docs.python.org/3/library/stdtypes.html#mutable-sequence-types),
-which means that they can be *changed*:
+which means that they can be *changed*: [^3]
 {% highlight python %}
 stuff = []              # empty list
 stuff.append("dog")     # append
@@ -440,6 +446,7 @@ As a more explicit alternative to `stuff[2:2] = ['parrot', 'llama']` one can use
 stuff.insert(2, 'parrot')
 stuff.insert(3, 'llama')
 {% endhighlight %}
+
 
 
 
@@ -537,3 +544,11 @@ In [21]: print(ages)
 [^2]:
 
      See, for instance, YouTube:[Truthiness](https://www.youtube.com/watch?v=Hiifw2fLJ4M) (in Python)
+
+[^3]:
+
+     Work on this exercise as part of [**Activity
+     04**]({{ site.org.url }}activity_04_expressions_datatypes)
+     (in class, follow the GitHub Classroom link available on Canvas;
+     outside class, clone the repository and push your changes and
+     check the *Actions* on *your* GitHub repository)
