--- a/_posts/2021-01-28-04_Python_1.md
+++ b/_posts/2021-01-28-04_Python_1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 04 Python I — Variables and Python data types
+title: 04 Python I — Variables, Expressions, and Python data types
 number: 40
 ---
 
@@ -213,27 +213,31 @@ bool(None)
 What rules does Python follow to determine the "truthiness" [^2] of an expression? 
 
 
-### Operators
+### Expressions
+
+Expressions in Python are formed from numbers, strings, ... and
+variables using *operators*. The most commonly used operatores are:
+
 * unary: `+x`, `-x`, `not x`
 * binary
 
   * [comparison operators](https://docs.python.org/3/library/stdtypes.html#comparisons),
-	e.g., `x == y`, `x != y`, `x > y`, `x <= y`, ...
+    e.g., `x == y`, `x != y`, `x > y`, `x <= y`, ...
 	
-	A comparison has a boolean value.
+    A comparison has a boolean value (`True` or `False`).
 
   * [numerical operators](https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex),
     e.g., `x + y`, `x - y`, `x * y`, `x / y`, `x ** y` (power), `x //
     y` (floor division), `x % y` (remainder). 
 	
-	Also *in-place* operations, which combine numerical operation with
+    Also *in-place* operations, which combine numerical operation with
     assignment (`x += y` is the same as `x = x + y`)
 
 * ternary (`x < y < z`, `x if y else z`)
 
 Use parentheses `(` and `)` for grouping and change of precedence.
 
-#### Activity: operators
+#### Activity: Expressions
 Compute the temperature $$T$$ in Kelvin from a temperature in Fahrenheit
 $$\theta = 100\,^\circ\mathrm{F}$$
 using
