list creation -> manipulation

--- a/_posts/2021-01-28-04_Python_1.md
+++ b/_posts/2021-01-28-04_Python_1.md
@@ -411,7 +411,7 @@ Part of this activity is also part of **Activity 04** [^3]:
    argument)
 
 
-#### List construction
+#### List manipulation
 Lists are
 [mutable](https://docs.python.org/3/library/stdtypes.html#mutable-sequence-types),
 which means that they can be *changed*: [^3]
