--- a/_posts/2021-02-02-04_Python_2.md
+++ b/_posts/2021-02-02-04_Python_2.md
@@ -95,10 +95,15 @@ yielding `1 3 5`.
 
 ##### Activity: `range()` #####
 
-Add code to `temperature2.py` (below) to print a
+Add code to `temperatures.py` (below) to print a
 table of the temperature in F and in K side by side by iterating
 through the lists `temperatures` and `temp_Kelvin`
-simultaneously. (Hint: You can use `len()` and `range()`[^2])
+simultaneously.
+
+Hints:
+* You can use `len()` and `range()`[^2]
+* Assign individual values to variables `T_K` and `theta_F` and print each line with the format `print("{0:6.1f} F   {1:6.1f} K".format(theta_F, T_K))`.
+
 
 {% highlight python %}
 # temperature conversion
@@ -171,9 +176,44 @@ while t <= tmax:
 print("Finished")
 {% endhighlight %}
 
+##### Activity: reading input
 
-**Example**: The program `fibonacci.py` will compute the
-[Fibonacci series](http://mathworld.wolfram.com/FibonacciNumber.html)
+A common problem is to read multiple inputs from a user until a
+specific input signals the end of input. The `while` loop works well
+in this case:
+
+{% highlight python %}
+# read data until empty input
+
+data = []
+x = input()
+while x != "":
+    data.append(x)
+    x = input()
+    
+print("data = {}".format(numbers))
+{% endhighlight %}
+
+Write a program `alternatesum.py` that computes the "alternating sum"
+
+$$
+A = \sum_{k=0}^{N-1} (-1)^k a_k
+$$
+
+from user input of $$N$$ numbers $$a_k, 0 \le k < N$$. Your program should
+
+1. read numbers from input until an empty line is encountered;
+2. store the numbers in a list `numbers`;
+3. calculate; the "alternating sum" `numbers[0] - numbers[1] +
+   numbers[2] - numbers[3] + ...` and store it in a variable `asum`. (You can
+   also print `asum`.)
+
+
+
+##### Example (optional): Fibonacci sequence
+
+The program `fibonacci.py` will compute the [Fibonacci
+series](http://mathworld.wolfram.com/FibonacciNumber.html)
 
 $$
 F_n = F_{n-1} + F_{n-2} \quad\text{with}\ F_1 = F_2 = 1
@@ -197,11 +237,11 @@ print()
 will do**. We will then run the code. If we get the expected results
 then, great!, otherwise: try to figure out why.
 
-<p class="note">
+<!-- <p class="note"> -->
 <em>Anticipating results and comparing to the run afterwards is the
 scientific method applied to programming. It is essential if you
 want to become a good programmer.</em>
-</p>
+<!-- </p> -->
 
 ### Conditionals
 
@@ -237,21 +277,23 @@ print("Theta(" + str(x) + ") = " + str(theta))
 {% endhighlight %}
 
 
-#### Activity: Step function
+#### Activity (optional): Step function
 
 Run `heaviside.py` for various values of `x` (at least -3, 0, 3) and
 test the output against the mathematical definition.
 
 #### Activity: Guessing game I
-Write a program that takes a number `guess` as input and compares it to a
-preset number `number`. Tell the player if their guess was "too low",
-"too high", or that they "guessed the number". You can start with the
-code below:
+
+Write a program `guessinggame.py` that takes a single number `guess`
+as input and compares it to a preset integer number
+`secret_number`. Tell the player if their guess was "too low", "too
+high", or that they "guessed the number". You can start with the code
+below:
 
 {% highlight python %}
 # guessinggame.py
 
-number = 42   # secret number
+secret_number = 42
 guess = int(input("Guess the number: "))
 
 # add more code here...
@@ -270,7 +312,7 @@ number = random.randint(1, 1000)  # secret integer number between 1 and 1000
 {% endhighlight %}
 
 
-#### Activity: Guessing game II
+#### Activity (optional): Guessing game II
 Perform this activity using *pair programming*[^3].
 
 Enhance the simple guessing game from the previous exercise so that
@@ -284,7 +326,7 @@ You *can* use the following *incomplete* code as a starting point:
 
 import random
 
-number = random.randint(1, 1000)  # secret integer number between 1 and 1000
+secret_number = random.randint(1, 1000)  # secret integer number between 1 and 1000
 
 n_guesses = 0
 guess = int(input("Guess the number between 1 and 1000: "))
@@ -293,6 +335,65 @@ guess = int(input("Guess the number between 1 and 1000: "))
    
 print("Congratulations, you guessed the number", number, "in", n_guesses, "guesses")
 {% endhighlight %}
+
+
+
+#### `break` and `continue`
+The `break` statement ends a `for` or `while` loop.
+
+The following example reads data from input until the special word "STOP" is encountered:
+
+{% highlight python %}
+data = []
+while True:
+    x = input()
+    if x == "STOP":
+        break
+    data.append(x)
+
+print(data)
+{% endhighlight %}
+
+The `for` loop can also have an `else` clause that is only executed
+when the loop exits normally (i.e., *not* via a `break`). We will use
+this feature when checking for convergence of algorithms, using a
+pattern similar to the following:
+
+{% highlight python %}
+for step in range(maxiter):
+   value, convergence_criterion = do_calculation()
+   if abs(convergence_criterion) < tolerance:
+      break   # converged, use value
+else:
+   print("Calculation did not converge after {} steps.".format(maxiter))
+
+print(value)
+
+{% endhighlight %}
+
+
+
+The `continue` statement immediately starts the next loop iteration.
+
+The following example only prints something every 10 steps:
+{% highlight python %}
+for step in range(100):
+    if step % 10 != 0:
+       continue
+    print("step = {}".format(step))
+{% endhighlight %}
+
+We can use it in parsing content to skip empty lines:
+{% highlight python %}
+text = "On the first line my true love\n  \n  brought to me\n\n\nOne python snake\n  in a directory tree.\n"
+print(text)
+for line in text.split('\n'):
+    line = line.strip()  # remove leading and trailing white space
+    if not line:
+       continue
+    print("line: ", line)
+{% endhighlight %}
+
 
 
 
