--- a/_posts/2021-02-02-04_Python_2.md
+++ b/_posts/2021-02-02-04_Python_2.md
@@ -159,7 +159,17 @@ The
 [while loop](https://docs.python.org/3/reference/compound_stmts.html#while)
 (see also the
 [while loop in the Python Tutorial](https://docs.python.org/3/tutorial/introduction.html#first-steps-towards-programming))
-iterates until a condition is `False`.
+iterates over a code block until an expression (the "condition") evaluates to `False`:
+
+{% highlight python %}
+while condition:
+   # while-block
+   ...
+{% endhighlight %}
+
+The while loop may execute zero times if `condition` is immediately
+`False`. It may also run an infinite number of times when the
+condition is always `True`.
 
 **Example**: The program `countup.py` will run until `t` has exceeded a preset
 value `tmax`:
