update for loop

--- a/_posts/2021-02-02-04_Python_2.md
+++ b/_posts/2021-02-02-04_Python_2.md
@@ -25,6 +25,21 @@ until a given condition is met.
 
 #### The `for` loop
 
+The ``for`` statement executes a code block (the "body" of the
+for-loop) once for each item in a sequence:
+
+{% highlight python %}
+for VARIABLE in SEQUENCE:
+    # for-block
+    ...   
+{% endhighlight %}
+
+* `VARIABLE` is set to each item of the sequence in turn. You can use
+  `VARIABLE` in the loop body.
+* **White-space indentation** demarcates a **block**: Convention: Use
+  4 spaces for each indentation level (not TABS)
+
+
 **Example**: Convert all the measured temperatures from Fahrenheit to
 Kelvin, using a
 [for loop](https://docs.python.org/3/tutorial/controlflow.html#for-statements).
@@ -58,13 +73,6 @@ to yield
 Conversion complete
 ~~~~~
 
-Note:
-
-* `for VARIABLE in SEQUENCE` is the for-loop in Python.
-* The body of the for loop is executed for each element in
-  `SEQUENCE` and `VARIABLE` is set to this element.
-* **White-space indentation** demarcates a **block**: Convention: Use
-  4 spaces for each indentation level (not TABS)
 
 ##### Activity: for loop #####
 
