update for loop

--- a/_posts/2021-02-02-04_Python_2.md
+++ b/_posts/2021-02-02-04_Python_2.md
@@ -34,10 +34,11 @@ for VARIABLE in SEQUENCE:
     ...   
 {% endhighlight %}
 
-* `VARIABLE` is set to each item of the sequence in turn. You can use
-  `VARIABLE` in the loop body.
 * **White-space indentation** demarcates a **block**: Convention: Use
   4 spaces for each indentation level (not TABS)
+* `VARIABLE` is set to each item of `SEQUENCE` in turn. You can use
+  `VARIABLE` in the loop body.
+* `SEQUENCE` can be a list, tuple, string, ... any "iterable".
 
 
 **Example**: Convert all the measured temperatures from Fahrenheit to
