add activity info for range()

--- a/_posts/2021-02-02-04_Python_2.md
+++ b/_posts/2021-02-02-04_Python_2.md
@@ -157,6 +157,8 @@ We often need a range of values at arbitrary step size, e.g., for plotting a fun
 generate a list of numbers from `start=-10` to `stop=10` (exclusive)
 with `step=0.25`, i.e., `[-10., -9.75, -9.5, ..., 9.5, 9.75]`.
 
+Put your code into file `grid.py` and store your list in the variable `x_grid`.
+
 (You can use list comprehensions. Think about how to use `range()` and
 how to use the integers to generate the floating point numbers.)
 
