--- a/_posts/2021-02-04-04_Python_3.md
+++ b/_posts/2021-02-04-04_Python_3.md
@@ -1,10 +1,11 @@
 ---
 layout: post
-title: 04 Introduction to Python III — Functions
+title: 04 Python III — Functions
+number: 42
 ---
 
 We are continuing from
-[the previous lesson]({{site.baseurl}}/{%post_url 2020-01-30-04_Introduction_to_Python_2%}) in the "work directory"
+[the previous lesson]({{ site.baseurl }}/{%post_url 2021-02-02-04_Python_2 %}) in the "work directory"
 `~/PHY494/04_python`. We will use `ipython` and your text editor.
 
 
@@ -55,7 +56,7 @@ Now add at the end of `heaviside.py`
 x = 3
 theta = heaviside(x)
 
-print("Theta(" + str(x) + ") = " + str(theta))
+print("Theta({0}) = {1}".format(x, theta))
 {% endhighlight %}
 
 and run it. Now the function is being called (`theta = heaviside(x)`)
@@ -97,17 +98,17 @@ should give [^4]
 
 Perform this activity using *pair programming*[^1].
 
-Use what you learnt about [loops]({{site.baseurl}}/{%post_url 2020-01-30-04_Introduction_to_Python_2%}#loops) and
+Use what you learnt about [loops]({{ site.baseurl }}/{%post_url 2021-02-02-04_Python_2 %}#loops) and
 [functions](#functions) to plot the Heaviside step function. Create a
 program `step_plot.py` that
 
 1. defines the Heaviside step function $$\Theta(x)$$ 
    (use [`heaviside(x)` from above](#functions));
 2. generates a list of $$x$$ values
-   `[-4, -3.5, -3, ..., 0, 0.5, 1, 1.5, ... 4]`;
+   `x_values = [-4, -3.5, -3, ..., 0, 0.5, 1, 1.5, ... 4]`;
 3. evaluates $$\Theta(x)$$ for all $$x$$ values and stores the results
-   in a list;
-4. prints the lists of $$x$$ and $$\Theta(x)$$ values; it should look
+   in a list `y_values`;
+4. prints the lists of $$x$$ and $$y = \Theta(x)$$ values; it should look
    like
    ~~~
 	-4.0 0.0
@@ -117,19 +118,18 @@ program `step_plot.py` that
 	4.0 1.0 
    ~~~
 5. BONUS: plots $$\Theta(x)$$ against $$x$$; see the
-   [Basic Plotting]({{site.baseurl}}{%post_url
-   2020-01-21-02_HelloWorld %}#basic-plotting) example, namely you can
+   [Basic Plotting]({{ site.baseurl }}{%post_url 2021-01-26-03_HelloWorld %}#basic-plotting) example, namely you can
    use code like
    
    {% highlight python %}
    import matplotlib.pyplot as plt
-   plt.plot(xvalues, thetas, '-o', color="red", linewidth=2)
+   plt.plot(x_values, y_values, '-o', color="red", linewidth=2)
    plt.show()
    {% endhighlight %}
    
    Does your graph look the way that you expect it? [^5]
 
-   ![Plot of the Heaviside step function]({{site.baseurl}}/{{site.figs}}/heaviside.png)
+   ![Plot of the Heaviside step function]({{ site.baseurl }}/{{ site.figs }}/heaviside.png)
 
 
 ## Advanced: Optional keyword arguments
@@ -189,8 +189,8 @@ Functions](https://docs.python.org/3/tutorial/controlflow.html#more-on-defining-
 
 [^0]:
 
-     See the [conversion from Fahrenheit to Kelvin]({{site.baseurl}}{%post_url
-     2020-01-28-04_Introduction_to_Python_1%}#activity-operators)
+     See the [conversion from Fahrenheit to Kelvin]({{ site.baseurl }}{% post_url
+     2021-01-28-04_Python_1 %}#activity-expressions)
       
      $$
      T = \frac{5}{9} (\theta - 32) + 273.15
@@ -199,23 +199,27 @@ Functions](https://docs.python.org/3/tutorial/controlflow.html#more-on-defining-
 
 [^1]:
 
-	 We will try a software engineering technique called
-     [pair programming](http://guide.agilealliance.org/guide/pairing.html)
+     We will try a software engineering technique called
+     [pair programming](https://guide.agilealliance.org/guide/pairing.html)
      (borrowed from
      agile/[extreme programming](http://www.extremeprogramming.org/))
-	 
-	 1. Split into teams of 2. (Be nice. Introduce yourselves.) 
-	 2. Sit next to each other at one desk.
-	 3. Decide whose laptop you are going to use.
-	 4. [Flip a coin](https://www.random.org/coins/?num=1&cur=60-usd.0100c-washington)
+
+     Each of the two programmers takes on one of the following roles:
+     - **driver**: has keyboard & types, runs the code
+     - **navigator** reads code, provides directions, catches bugs
+
+     *Both* constantly talk to each other: comment on what you're
+     typing, comment on what is being typed. Roles are not static but
+     are supposed to be switched frequently.
+
+         
+     1. Split into teams of 2. (Be nice. Introduce yourselves.) 
+     2. <strike>Sit next to each other at one desk.</strike> Share a Zoom Breakout room
+     3. [Flip a coin](https://www.random.org/coins/?num=1&cur=60-usd.0100c-washington)
         to decide who will start out as the *navigator* and who will
-        be the *driver*.		
-	 5. Roles:
-		- *driver*: keyboard & types
-		- *navigator* reads code, provides directions, catches bugs
-		- *Both* constantly talk to each other: comment on what you're
-          typing, comment on what is being typed		
-	 6. Switch roles every ~5 minutes
+        be the *driver*.     
+     4. <strike>Decide whose laptop you are going to use.</strike> The *driver* will share their screen and type and run code.
+     5. <strike>Switch roles every ~5 minutes</strike> Maintain roles for one exercise (or switch if feasible, e.g., if you can quickly exchange code via a remote repository)
 
 
 [^3]:
@@ -225,8 +229,8 @@ Functions](https://docs.python.org/3/tutorial/controlflow.html#more-on-defining-
 
 [^4]:
 
-    You can compare your solution to [myfuncs.py]({{site.baseurl}}/{{site.code}}/myfuncs.py).
+    You can compare your solution to [myfuncs.py]({{ site.baseurl }}/{{ site.code }}/myfuncs.py).
 
 [^5]:
 
-    You can compare your solution to [step_plot.py]({{site.baseurl}}/{{site.code}}/step_plot.py).
+    You can compare your solution to [step_plot.py]({{ site.baseurl }}/{{ site.code }}/step_plot.py).
