Python 4: modules and classes

--- a/_posts/2021-02-09-04_Python_4.md
+++ b/_posts/2021-02-09-04_Python_4.md
@@ -1,16 +1,17 @@
 ---
 layout: post
-title: 04 Introduction to Python IV — Modules and Objects
+title: 04 Python IV — Modules and Objects
+number: 43
 ---
 
-We are continuing from
-[the previous lesson]({{site.baseurl}}/{%post_url 2020-02-04-04_Introduction_to_Python_3%}) in the "work directory"
+We are continuing from [the previous lesson]({{ site.baseurl }}/{%
+post_url 2021-02-04-04_Python_3 %}) in the "work directory"
 `~/PHY494/04_python`. We will use `ipython` and your text editor.
 
 Re-using code is key to writing maintainable and correct code. We
-already learnt how to package code into [functions]({{site.baseurl}}/{%post_url
-2020-02-04-04_Introduction_to_Python_3%}#functions). Now we learn how
-to package functions into [modules](#modules). 
+already learnt how to package code into [functions]({{ site.baseurl
+}}/{% post_url 2021-02-04-04_Python_3 %}#functions). Now we learn how
+to package functions into [modules](#modules).
 
 We will also briefly talk about [objects](#objects) because everything
 in Python is an "object". Objects are a more general approach to
@@ -32,7 +33,7 @@ h = 6.62606957e-34
 ### Importing modules
 
 We can **import** the file in the python interpreter with the
-[import](https://docs.python.org/3.5/reference/simple_stmts.html#import)
+[import](https://docs.python.org/3/reference/simple_stmts.html#import)
 statement (note: `constants.py` must be in the same directory, check
 with `%pwd` and `%ls`)
 
@@ -62,10 +63,10 @@ h_bar = c.h / (2*c.pi)
 
 ### Activity: Import and use your `myfuncs` module
 
-In the previous lesson you created [myfuncs.py]({{site.baseurl}}/{%post_url
-2020-02-04-04_Introduction_to_Python_3%}#activity-create-functions),
-which contains three different functions. Now treat it as a *module*
-and import it and use the functions in the module.
+In the previous lesson you created [myfuncs.py]({{ site.baseurl }}/{%
+post_url 2021-02-04-04_Python_3 %}#activity-create-functions), which
+contains three different functions. Now treat it as a *module* and
+import it and use the functions in the module.
 
 You should be able to do use your functions in the following manner 
 {% highlight python %}
@@ -100,8 +101,8 @@ math.sin(math.pi)
 
 Other packages that we are going to use
 
-* [numpy](http://www.numpy.org/)
-* [matplotlib](http://matplotlib.org/)
+* [numpy](https://www.numpy.org/)
+* [matplotlib](https://matplotlib.org/)
 * [scipy](https://www.scipy.org/scipylib/index.html)
 
 
@@ -120,6 +121,19 @@ know how to operate on the data in the object.
 Python is an *object oriented* (OO) language and objects are
 everywhere --- in fact *everything* is an object in Python.
 
+Key terms for OOP in Python:
+
+- **object**: think of it as a data structure together with the code
+  needed to work with this data structure (like a list that can be
+  appended to or sorted and has a length)
+- **attribute**: a "variable" associated with an object, e.g., `obj.variable` [^0]
+- **method**: a "function" associated with an object, e.g., `obj.func(...)`
+- Attributes and methods are accessed with the **dot operation** (like
+  the content of modules [^1])
+- An object is an **instance** of a **class**, which means that
+  objects are created from a [`class` definition](https://docs.python.org/3/tutorial/classes.html#class-definition-syntax).
+
+
 ### Some Python objects
 Even if you don't use object-oriented programming, you still need to
 know how to work with Python objects. We look at a few examples.
@@ -127,6 +141,7 @@ know how to work with Python objects. We look at a few examples.
 Each [built-in type](https://docs.python.org/3/library/stdtypes.html)
 (`int`, `float`, `str`, ...) is an object with associated *methods*
 and *attributes*.
+
 
 #### Strings
 The text sequence --- or "string" --- type
@@ -456,6 +471,19 @@ and objects.
 
 #### Footnotes ####
 
+[^0]:
+
+    You might also hear the variables of an object called "fields" and
+    both fields and methods be called attributes. In Python there
+    actually does not exist a fundamental difference between fields
+    and methods because functions are objects themselves that are
+    stored in a field. Hence it makes sense to think of all of them as
+    attributes of an object. It is however common in Python to use the
+    terminology introduced above, with attributes and methods.
+
+[^1]:
+
+    ... because modules are objects!
 
 [^2]:
 
