update constants module exercise
- exact value for h (and c)
- name variable hbar
- print to 9 significant figures

--- a/_posts/2021-02-09-04_Python_4.md
+++ b/_posts/2021-02-09-04_Python_4.md
@@ -22,12 +22,15 @@ in Python is an "object". Objects are a more general approach to
 
 Modules (and packages) are "libraries" for Python code. 
 
+### Activity: A module for constants
+
 Create a file `constants.py`:
 {% highlight python %}
 # constants.py
 
-pi = 3.14159
-h = 6.62606957e-34
+pi = 3.1415926535897932384626
+h = 6.62607015e-34
+c = 299792458
 {% endhighlight %}
 
 ### Importing modules
@@ -41,9 +44,9 @@ with `%pwd` and `%ls`)
 import constants
 
 two_pi = 2 * constants.pi
-h_bar = constants.h / two_pi
+hbar = constants.h / two_pi
 
-print('h_bar:', h_bar)
+print('hbar = {:.9e}'.format(hbar))
 {% endhighlight %}
 
 Contents of a module are accessed with the "dot" operator, e.g,
@@ -54,11 +57,11 @@ Other ways to import:
 {% highlight python %}
 # direct import
 from constants import h, pi
-h_bar = h / (2*pi)
+hbar = h / (2*pi)
 
 # aliasing
 import constants as c
-h_bar = c.h / (2*c.pi)
+hbar = c.h / (2*c.pi)
 {% endhighlight %}
 
 ### Activity: Import and use your `myfuncs` module
@@ -70,11 +73,11 @@ import it and use the functions in the module.
 
 You should be able to do use your functions in the following manner 
 {% highlight python %}
-y = myfuncs.heaviside(1000)
-print(y)
+y = [myfuncs.heaviside(x) for x in range(-10, 11)]
+print("Heaviside: {}".format(y))
 
 t_boil = myfuncs.kelvin2celsius(373.15)
-print(t_boil)
+print("Water boils at {.2f} C".format(t_boil))
 {% endhighlight %}
 
 and get output
