--- a/_posts/2021-02-09-04_Python_4.md
+++ b/_posts/2021-02-09-04_Python_4.md
@@ -69,23 +69,31 @@ hbar = c.h / (2*c.pi)
 In the previous lesson you created [myfuncs.py]({{ site.baseurl }}/{%
 post_url 2021-02-04-04_Python_3 %}#activity-create-functions), which
 contains three different functions. Now treat it as a *module* and
-import it and use the functions in the module.
+import it and use some of the functions in the module.
 
-You should be able to do use your functions in the following manner 
-{% highlight python %}
-y = [myfuncs.heaviside(x) for x in range(-10, 11)]
-print("Heaviside: {}".format(y))
+1. Compute the Heaviside function $$\Theta(n)$$ (i.e.,
+   `myfuncs.heaviside(x)`) for the integers $$-10 ≤ n ≤ 10$$, assign
+   the list to a variable `y`, and print it with
+   
+   {% highlight python %}
+   print(f"Heaviside: {y}")
+   {% endhighlight %}
 
-t_boil = myfuncs.kelvin2celsius(373.15)
-print("Water boils at {.2f} C".format(t_boil))
-{% endhighlight %}
+   (This `print()` uses an
+   [f-string](https://docs.python.org/3/reference/lexical_analysis.html#formatted-string-literals),
+   available since Python 3.6 as an improvement over [format
+   representations](https://docs.python.org/3/library/functions.html#format);
+   both use the [Format Specification
+   Mini-Language](https://docs.python.org/3/library/string.html#formatspec))
 
-and get output
-
-~~~{.output}
-1.0
-100.0
-~~~
+2. Compute the temperature of the boiling point of water under
+   standard conditions in degrees Celsius from the value in Kelvin,
+   $$T_\matrm{boil} = 373.15$$ K. Assign it to a variable `t_boil` and
+   print it with
+   
+   {% highlight python %}
+   print(f"Water boils at {t_boil:.2f}°C.")
+   {% endhighlight %}
 
 
 ### Standard Library and the Python Eco System
@@ -107,6 +115,47 @@ Other packages that we are going to use
 * [numpy](https://www.numpy.org/)
 * [matplotlib](https://matplotlib.org/)
 * [scipy](https://www.scipy.org/scipylib/index.html)
+
+#### Activity: Explore the Standard Library
+
+Import the *[math](https://docs.python.org/3/library/math.html)*
+module and the *[os](https://docs.python.org/3/library/os.html)*
+module from the [Python Standard
+Library](https://docs.python.org/3/library/index.html) in a file
+`problem3.py`. Look in these modules for functions and attributes to
+solve the following problems:
+
+1. Compute $$\sin(\tau)$$ and assign the result to variable
+   `y_full_circle` (see
+   [`math.tau`](https://docs.python.org/3/library/math.html#math.tau)). (Optionally,
+   you can also print the value.)
+
+2. Define the [cumulative distribution
+   function](https://en.wikipedia.org/wiki/Normal_distribution#Cumulative_distribution_function)
+   of the normal distribution with mean µ and standard deviation σ
+   \\[
+        \Phi(x, µ, σ) = \frac{1}{2} \left[1 + \mathrm{erf}\left(\frac{x-µ}{σ \sqrt{2}}\right)\right]
+   \\]
+   as a Python function `Phi(x, mu=0., sigma=1.0)`.
+   
+   For a random variable $$X$$ that is normally distributed with mean
+   µ=88.6 and standard deviation σ=6.3 compute the probability
+   $$P(X>95)$$ to observe a value of $$X > 95$$, using
+   \\[
+        P(X > x) = 1 - \Phi(x, µ, σ)
+   \\]
+   Assign your result to a variable `P_aplus` and print it with
+   ```python
+   print(f"P(X > 95) = {100 * P_aplus:.1f}%")
+   ```
+
+
+3. Get the current working directory as a string and assign to the
+   variable `cwd` and print it with
+   ```python
+   print(f"cwd = '{cwd}'")
+   ```   
+
 
 
 ## Objects
@@ -265,7 +314,7 @@ done "in place", i.e., they change the list itself.
 {% endhighlight %}
 
 
-#### Activity: List methods
+#### Activity: List methods (optional)
 
 1. generate a list with all even numbers from -100 to +100
 2. sum these numbers with `sum()` -- should be 0
