remove UTF-8 degree symbol from activity

--- a/_posts/2021-02-09-04_Python_4.md
+++ b/_posts/2021-02-09-04_Python_4.md
@@ -84,15 +84,15 @@ import it and use some of the functions in the module.
    available since Python 3.6 as an improvement over [format
    representations](https://docs.python.org/3/library/functions.html#format);
    both use the [Format Specification
-   Mini-Language](https://docs.python.org/3/library/string.html#formatspec))
+   Mini-Language](https://docs.python.org/3/library/string.html#formatspec).)
 
 2. Compute the temperature of the boiling point of water under
    standard conditions in degrees Celsius from the value in Kelvin,
-   $$T_\matrm{boil} = 373.15$$ K. Assign it to a variable `t_boil` and
+   $$T_\mathrm{boil} = 373.15$$ K. Assign it to a variable `t_boil` and
    print it with
    
    {% highlight python %}
-   print(f"Water boils at {t_boil:.2f}°C.")
+   print(f"Water boils at {t_boil:.2f} C.")
    {% endhighlight %}
 
 
