--- a/_posts/2021-02-09-04_Python_4.md
+++ b/_posts/2021-02-09-04_Python_4.md
@@ -88,7 +88,7 @@ import it and use some of the functions in the module.
 
 2. Compute the temperature of the boiling point of water under
    standard conditions in degrees Celsius from the value in Kelvin,
-   $$T_\mathrm{boil} = 373.15$$ K. Assign it to a variable `t_boil` and
+   $$T_{\mathrm{boil}} = 373.15$$ K. Assign it to a variable `t_boil` and
    print it with
    
    {% highlight python %}
