include problem2.py instructions

--- a/_posts/2021-02-09-04_Python_4.md
+++ b/_posts/2021-02-09-04_Python_4.md
@@ -69,7 +69,7 @@ hbar = c.h / (2*c.pi)
 In the previous lesson you created [myfuncs.py]({{ site.baseurl }}/{%
 post_url 2021-02-04-04_Python_3 %}#activity-create-functions), which
 contains three different functions. Now treat it as a *module* and
-import it and use some of the functions in the module.
+import it inside a file `problem2.py` and use some of the functions in the module.
 
 1. Compute the Heaviside function $$\Theta(n)$$ (i.e.,
    `myfuncs.heaviside(x)`) for the integers $$-10 ≤ n ≤ 10$$, assign
