--- a/_posts/2021-02-09-04_Python_4.md
+++ b/_posts/2021-02-09-04_Python_4.md
@@ -75,25 +75,24 @@ import it inside a file `problem2.py` and use some of the functions in the modul
    `myfuncs.heaviside(x)`) for the integers $$-10 ≤ n ≤ 10$$, assign
    the list to a variable `y`, and print it with
    
-   {% highlight python %}
+   ```python
    print(f"Heaviside: {y}")
-   {% endhighlight %}
-
+   ```
+   
    (This `print()` uses an
    [f-string](https://docs.python.org/3/reference/lexical_analysis.html#formatted-string-literals),
    available since Python 3.6 as an improvement over [format
    representations](https://docs.python.org/3/library/functions.html#format);
    both use the [Format Specification
    Mini-Language](https://docs.python.org/3/library/string.html#formatspec).)
-
 2. Compute the temperature of the boiling point of water under
    standard conditions in degrees Celsius from the value in Kelvin,
    $$T_{\mathrm{boil}} = 373.15$$ K. Assign it to a variable `t_boil` and
    print it with
    
-   {% highlight python %}
+   ```python
    print(f"Water boils at {t_boil:.2f} C.")
-   {% endhighlight %}
+   ```
 
 
 ### Standard Library and the Python Eco System
