FIXED: major FAIL (Cloud City is Epsiode V)

--- a/_posts/2021-02-09-04_Python_4.md
+++ b/_posts/2021-02-09-04_Python_4.md
@@ -267,7 +267,7 @@ done "in place", i.e., they change the list itself.
 
 
 {% highlight python %}
-# Episode VI - The Empire Strikes Back: Cloud City 
+# Episode V - The Empire Strikes Back: Cloud City 
 # (SPOILER ALERT!)
 
 >>> rebels = ["Leia", "Han", "Chewie", "C3PO"]
@@ -295,13 +295,13 @@ done "in place", i.e., they change the list itself.
 >>> print(rebels)
 ['Leia', 'C3PO', 'Chewie']
 
->>> rebels.extend(["Luke", "R2D2"])
+>>> rebels.extend(["R2D2", "Luke"])
 >>> print(rebels)
-['Leia', 'C3PO', 'Chewie', 'Luke', 'R2D2']
+['Leia', 'C3PO', 'Chewie', 'R2D2', 'Luke']
 
 >>> rebels.reverse()
 >>> print(rebels)
-['R2D2', 'Luke', 'Chewie', 'C3PO', 'Leia']
+['Luke', 'R2D2', 'Chewie', 'C3PO', 'Leia']
 
 >>> rebels.sort()
 >>> print(rebels)
