updated debugging lesson

--- a/_posts/2021-02-11-05_Debugging.md
+++ b/_posts/2021-02-11-05_Debugging.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 05 Debugging Primer
+number: 50
 ---
 
 Code contains errors (also known as
@@ -8,7 +9,7 @@ Code contains errors (also known as
 the first bug was a moth stuck in an electromechanical relay of the
 Mark II).
 
-![The first bug: A page from the Harvard Mark II electromechanical computer's log, featuring a dead moth that was removed from the device. Courtesy of the Naval Surface Warfare Center, Dahlgren, VA., 1988. - U.S. Naval Historical. (Image is in the Public Domain)](https://upload.wikimedia.org/wikipedia/commons/8/8a/H96566k.jpg)
+![The first bug: A page from the Harvard Mark II electromechanical computer's log, featuring a dead moth that was removed from the device. Courtesy of the Naval Surface Warfare Center, Dahlgren, VA., 1988. - U.S. Naval Historical. (Image is in the Public Domain)](https://upload.wikimedia.org/wikipedia/commons/f/ff/First_Computer_Bug%2C_1945.jpg)
 
 Bugs can be
 
@@ -57,27 +58,8 @@ but you have to do it --- code that produces wrong results is useless.
 
 ## Activity: Fix as many bugs as possible!
 
-Code for the examples below is in the [PHY494-resources
-repository]({{site.baseurl}}{% post_url 2020-01-23-03_Git_basics
-%}#class-resources-on-github): Pull in the latest updates
-
-{% highlight bash %}
-cd ~/PHY494-resources
-git pull
-{% endhighlight %}
-
-then copy the code examples to your work directory for this lesson,
-`~/PHY494/05_debugging`,
-
-{% highlight bash %}
-cp -r ~/PHY494-resources/05_debugging ~/PHY494
-{% endhighlight %}
-
-and work there
-
-{% highlight bash %}
-cd ~/PHY494/05_debugging
-{% endhighlight %}
+Code for the examples below comes in a Classroom Activity (set-up link
+provided in the Canvas LMS). [^0]
 
 
 ### Syntax and language
@@ -99,11 +81,14 @@ print("Done")
 {% endhighlight %}
 
 #### Bug 3
-Print "error" for input 0:
+Print "error" for input 0 or the inverse of the input number:
 {% highlight python %}
-x = float(input("Enter non-zero number --> "))
+x = input("Enter non-zero number --> ")
 if x = 0:
-   print("ERROR: number cannot be 0") 
+   print("ERROR: number cannot be 0")
+else:
+   inverse = 1/x
+   print(inverse)
 {% endhighlight %}
 
 #### Bug 4
@@ -222,6 +207,31 @@ print(values)
 ------------------------------------------------------------
 
 #### Footnotes ####
+
+[^0]:
+
+    If you do not have the access to the GitHub Classroom (e.g.,
+    because you are not taking the PHY494 class) then you can do this
+    exercise by copying and pasting the code given above or by using
+    the [PHY494-resources repository]({{ site.baseurl }}{% post_url
+    2021-01-19-02_Git_basics %}#class-resources-on-github): Pull in
+    the latest updates
+
+    ```bash
+    cd ~/PHY494-resources
+    git pull
+    ```
+
+    then copy the code examples to your work directory for this lesson,
+    `~/PHY494/05_debugging`,
+
+    ```bash
+    cp -r ~/PHY494-resources/05_debugging ~/PHY494
+    cd ~/PHY494/05_debugging    
+    ```
+
+    and work there.
+
 
 [^1]:
 
