added input errors

--- a/_posts/2021-02-11-05_Debugging.md
+++ b/_posts/2021-02-11-05_Debugging.md
@@ -14,8 +14,10 @@ Mark II).
 Bugs can be
 
 * [syntax and language errors](#syntax-and-language) (easy, relatively
-  speaking) and errors that raise exceptions under certain conditions
-* [logic errors](#logic-errors), corner cases, [edge cases](#edge-cases) (hard)
+  speaking)
+* input errors (not properly dealing with bad/wrong/unexpected input
+  data): errors that raise exceptions under certain conditions
+* [logic errors](#logic-errors), [edge cases](#edge-cases), corner cases (hard)
 
 Here we provide an introduction to the absolutely necessary business
 of identifying and fixing ("squashing") software bugs. Work through
