--- a/_posts/2021-02-11-05_Debugging.md
+++ b/_posts/2021-02-11-05_Debugging.md
@@ -49,6 +49,9 @@ but you have to do it --- code that produces wrong results is useless.
 
 * Prototype small code pieces interactively in `ipython`.
 
+* Modularize code (functions, classes, modules) and test individual
+  pieces of code.
+
 * Run programs inside `ipython` using the `%run` magic function:
 
   {% highlight python %}
@@ -57,6 +60,10 @@ but you have to do it --- code that produces wrong results is useless.
 
   The advantage is that now you can *examine variables interactively*
   inside the interpreter.[^1]
+
+* Learn to use the [Python debugger in
+  ipython](https://ipython.readthedocs.io/en/stable/interactive/reference.html#using-the-python-debugger-pdb)
+  (enable with `%pdb` in ipython).
 
 ## Activity: Fix as many bugs as possible!
 
