--- a/_posts/2021-02-25-07_Numbers.md
+++ b/_posts/2021-02-25-07_Numbers.md
@@ -1,13 +1,14 @@
 ---
 layout: post
 title: 07 Numbers
+number: 70
 ---
 
 When working with numerical code, one has to be aware of the
 limitations imposed by the
 [representation of numbers in the computer](#representation-of-numbers)
-and the [numerical errors]({{site.baseurl}}/{% post_url
-2020-02-20-08_Errors %}) that algorithms invariably accumulate.
+and the numerical errors {% comment %}[numerical errors]({{site.baseurl}}/{% post_url 
+ 2021-02-25-08_Errors %}){% endcomment %} that algorithms invariably accumulate.
 
 ## Representation of numbers
 
@@ -31,22 +32,20 @@ consequences.[^4]
 
 The class will be presented in a Jupyter notebook. The annotated
 notebook is
-[07-numbers.ipynb]({{site.nbviewer.resources}}/07_numbers/07-numbers.ipynb).
+[07-numbers.ipynb]({{ site.nbviewer.resources }}/07_numbers/07-numbers.ipynb).
 
-#### Problem: Sine Series (Optional)
-For one problem you should obtain the notebook
-[07-problem-sine-series.ipynb]({{site.nbviewer.resources}}/07_numbers/07-problem-sine-series.ipynb),
-which already contains part of the code you will need. `git pull` the
-`PHY494-resources` repository and find it under
-`~/PHY494-resources/07_numbers/07-problem-sine-series.ipynb`;
-as usual, copy it to your work directory
-(`~/PHY494/07_numbers`) and work on it there.
+### Activity: Sine Series
 
-(The solution
-[07-solution-sine-series.ipynb]({{site.nbviewer.resources}}/07_numbers/07-solution-sine-series.ipynb)
-will be made available later.)
+As a classroom activity we will implement the sine function, as
+outlined in
+[activity_10_numbers_sine_series/sine-series.ipynb](https://github.com/ASU-CompMethodsPhysics-PHY494/activity_10_numbers_sine_series/blob/main/sine-series.ipynb).
 
-### Additional resources for Numbers
+To set up your activity repository, follow the GitHub Classroom
+activation link on Canvas (or clone the
+[activity_10_numbers_sine_series](https://github.com/ASU-CompMethodsPhysics-PHY494/activity_10_numbers_sine_series)
+repository).
+
+### Additional resources
 
 * _Computational Physics_: Ch 2.4, 2.5, 3
 * Python Tutorial
@@ -78,8 +77,8 @@ will be made available later.)
 [^3]:
 
      The Python `float` is a IEEE 754 *double*. NumPy has a wider
-     range of numeric data types, including `float32` (like *float*),
-     `float64` (like *double*) and also `float128`, but the `float128`
+     range of numeric data types, including `float32` (like IEEE 754 *float*),
+     `float64` (like IEEE 754 *double*) and also `float128`, but the `float128`
      [is not really a true 128-bit
 	 number](https://stackoverflow.com/a/17023995/); on typical x86
 	 machines, these are C `long double` which can provide up to 80
