--- a/_posts/2021-02-25-07_Numbers.md
+++ b/_posts/2021-02-25-07_Numbers.md
@@ -5,10 +5,10 @@ number: 70
 ---
 
 When working with numerical code, one has to be aware of the
-limitations imposed by the
-[representation of numbers in the computer](#representation-of-numbers)
-and the numerical errors {% comment %}[numerical errors]({{site.baseurl}}/{% post_url 
- 2021-02-25-08_Errors %}){% endcomment %} that algorithms invariably accumulate.
+limitations imposed by the [representation of numbers in the
+computer](#representation-of-numbers) and the numerical errors
+[numerical errors]({{site.baseurl}}/{% post_url 2021-03-02-08_Errors
+%}) that algorithms invariably accumulate.
 
 ## Representation of numbers
 
