--- a/_posts/2021-03-02-08_Errors.md
+++ b/_posts/2021-03-02-08_Errors.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 title: 08 Errors
+number: 80
 ---
 
 When working with numerical code, one has to be aware of the
-limitations imposed by the
-[representation of numbers in the computer]({{site.baseurl}}/{%
-post_url 2020-02-20-07_Numbers %}) and the [numerical errors](#errors)
-that algorithms invariably accumulate.
+limitations imposed by the [representation of numbers in the
+computer]({{ site.baseurl }}/{% post_url 2021-02-25-07_Numbers %}) and
+the [numerical errors](#errors) that algorithms invariably accumulate.
 
 
 
@@ -23,7 +23,7 @@ operations or the computational cost.
 ### Class material for Errors
 
 You can follow the lecture in the notebook
-[08-errors.ipynb]({{site.nbviewer.resources}}/08_errors/08-errors.ipynb).
+[08-errors.ipynb]({{ site.nbviewer.resources }}/08_errors/08-errors.ipynb).
 
 
 ### Additional resources for Errors
