notebook for sin function error analysis

--- a/_posts/2021-03-02-08_Errors.md
+++ b/_posts/2021-03-02-08_Errors.md
@@ -25,6 +25,11 @@ operations or the computational cost.
 You can follow the lecture in the notebook
 [08-errors.ipynb]({{ site.nbviewer.resources }}/08_errors/08-errors.ipynb).
 
+We will analyze the error of the sine function implementation in
+[erroranalysis/sine-series-erroranalysis-students.ipynb]({{
+site.nbviewer.resources
+}}/08_errors/erroranalysis/sine-series-erroranalysis-students.ipynb). (The
+full solution will be posted as [erroranalysis/sine-series-erroranalysis.ipynb]({{ site.nbviewer.resources }}/08_errors/erroranalysis/sine-series-erroranalysis.ipynb).)
 
 ### Additional resources for Errors
 
