--- a/_posts/2021-03-09-10_ODEs.md
+++ b/_posts/2021-03-09-10_ODEs.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: 10 Ordinary Differential Equations (ODEs)
+number: 100
 ---
 
 Most physical phenomena are ultimately described by a relationship
