--- a/_posts/2021-04-08-15_PDEs.md
+++ b/_posts/2021-04-08-15_PDEs.md
@@ -1,11 +1,12 @@
 ---
 layout: post
 title: 15 Partial Differential Equations (PDEs)
+number: 150
 ---
 
-Most physical phenomena are ultimately described by a relationship between changing quantities. If only a single quantity such as time is changing, [Ordinary Differential Equations]({{site.baseurl}}{% post_url 2020-02-27-10_ODEs %}) (ODEs) result. However, as soon as more than a single quantity varies independently from the other ones, [partial differential equations](http://mathworld.wolfram.com/PartialDifferentialEquation.html) (**PDEs**) have to be solved.
+Most physical phenomena are ultimately described by a relationship between changing quantities. If only a single quantity such as time is changing, [Ordinary Differential Equations]({{site.baseurl}}{% post_url 2021-03-09-10_ODEs %}) (ODEs) result. However, as soon as more than a single quantity varies independently from the other ones, [partial differential equations](https://mathworld.wolfram.com/PartialDifferentialEquation.html) (**PDEs**) have to be solved.
 
-For example, a scalar field $$U(x, y)$$ admits the general PDE
+For example, a scalar field $$U(x, y)$$ admits the general second order PDE
 
 $$
 A(x, y)\frac{\partial^2 U}{\partial x^2} +
@@ -31,7 +32,9 @@ $$
 
 ## Classes of second-order PDEs
 
-Second-order PDEs (highest partial derivatives are second order, such as $$U_{xz}$$ or $$U_{tt}$$) are ubiquitous in physics and can be classified as
+Second-order PDEs (highest partial derivatives are second order, such
+as $$U_{xz}$$ or $$U_{tt}$$) are ubiquitous in physics and can be
+broadly classified as
 
 * *elliptic* PDEs (discriminant $$AC - B^2 > 0$$, second derivatives of all variables and all with the same sign, e.g., Poisson's equation $$\nabla^2 U(x, y, z)  = U_{xx} + U_{yy} + U_{zz} = -4\pi\rho(x,y,z)$$);
 * *parabolic* PDEs ($$AC - B^2 = 0$$, second order derivative of one variable and first order derivative of the other one, e.g., the heat equation $$\nabla^2 U(x, y, z, t) - a \frac{\partial U}{\partial t} = 0$$);
@@ -39,7 +42,7 @@ Second-order PDEs (highest partial derivatives are second order, such as $$U_{xz
 
 ## Boundary conditions
 
-PDEs are more complicated than ODEs. General solutions of PDEs involve arbitrary functions and additional *[boundary conditions](http://mathworld.wolfram.com/BoundaryConditions.html)* (values or derivatives of the solution $$U(x,y)$$ on the boundary of the problem domain) have to be specified to obtain a specific solution (in addition to any *initial conditions*).
+PDEs are more complicated than ODEs. General solutions of PDEs involve arbitrary functions and additional *[boundary conditions](https://mathworld.wolfram.com/BoundaryConditions.html)* (values or derivatives of the solution $$U(x,y)$$ on the boundary of the problem domain) have to be specified to obtain a specific solution (in addition to any *initial conditions*).
 
 * *Dirichlet boundary conditions* prescribe the value of the solution on a surrounding closed surface.
 * *Neumann boundary conditions* specify the value of the normal derivative on the surrounding surface.
@@ -50,7 +53,7 @@ Often, no analytic solutions can be found or the analytic solutions are unwieldy
 
 ## Solving PDEs numerically
 
-We will look at various [finite difference]({{site.baseurl}}{% post_url 2020-02-25-09_Differentiation %}) schemes (both explicit and implicit) to solve the different classes of PDEs.
+We will look at various [finite difference]({{ site.baseurl }}{% post_url 2021-03-04-09_Differentiation %}) schemes (both explicit and implicit) to solve the different classes of PDEs.
 
 The movies show how the solutions of simple electrostatic problems
 relax to the converged solution (using successive over-relaxation
@@ -59,42 +62,44 @@ with the Gauss-Seidel algorithm.)
 <video width="350.0" height="350.0" controls autoplay loop>
 <source type="video/quicktime" src="{{site.baseurl}}/{{site.movies}}/wire_SOR_3d.mov" />
   Your browser does not support the video tag. You can find the video
-  file at [{{site.baseurl}}/{{site.movies}}/wire_SOR_3d.mov]({{site.baseurl}}/{{site.movies}}/wire_SOR_3d.mov) .
+  file at [{{ site.baseurl }}/{{ site.movies }}/wire_SOR_3d.mov]({{
+  site.baseurl }}/{{ site.movies }}/wire_SOR_3d.mov) .
 </video>
 
 <video width="350.0" height="350.0" controls autoplay loop>
 <source type="video/quicktime" src="{{site.baseurl}}/{{site.movies}}/dipole_wire_SOR_3d.mov" />
   Your browser does not support the video tag. You can find the video
-  file at [{{site.baseurl}}/{{site.movies}}/dipole_wire_SOR_3d.mov]({{site.baseurl}}/{{site.movies}}/dipole_wire_SOR_3d.mov) .
+  file at [{{ site.baseurl }}/{{ site.movies
+  }}/dipole_wire_SOR_3d.mov]({{ site.baseurl }}/{{ site.movies }}/dipole_wire_SOR_3d.mov) .
 </video>
 
 
 
 ## Class material
 
-1. [15_PDEs-1.ipynb]({{site.nbviewer.resources}}/15_PDEs/15_PDEs-1.ipynb)
+1. [15_PDEs-1.ipynb]({{ site.nbviewer.resources }}/15_PDEs/15_PDEs-1.ipynb)
    [^1]:
    Poisson's and Laplace's equation: Background
-   ([board notes on PDEs (PDF)]({{site.resources.fileurl}}/15_PDEs/15_PDEs-1-LectureNotes.pdf)),
+   ([board notes on PDEs (PDF)]({{ site.resources.fileurl }}/15_PDEs/15_PDEs-1-LectureNotes.pdf)),
    Gauss-Seidel algorithm, problems:
-   [15_PDEs-1-Students.ipynb]({{site.nbviewer.resources}}/15_PDEs/15_PDEs-1-Students.ipynb) [^2]
-2. [15_PDEs-2.ipynb]({{site.nbviewer.resources}}/15_PDEs/15_PDEs-2.ipynb)
+   [15_PDEs-1-Students.ipynb]({{ site.nbviewer.resources }}/15_PDEs/15_PDEs-1-Students.ipynb) [^2]
+2. [15_PDEs-2.ipynb]({{ site.nbviewer.resources }}/15_PDEs/15_PDEs-2.ipynb)
    [^1]:
    fast Jacobi, Gauss-Seidel and Successive Over Relaxation algorithms
    (using NumPy array operations, see
    [board notes on numpyfied Poisson solvers
-   (PDF)]({{site.resources.fileurl}}/15_PDEs/15_PDEs-2-LectureNotes.pdf))
+   (PDF)]({{ site.resources.fileurl }}/15_PDEs/15_PDEs-2-LectureNotes.pdf))
    and how to replace slow Python loops with fastnumpy array
-   operations ([numpy_arrays.ipynb]({{site.nbviewer.resources}}/15_PDEs/numpy_arrays.ipynb)),
+   operations ([numpy_arrays.ipynb]({{ site.nbviewer.resources }}/15_PDEs/numpy_arrays.ipynb)),
    Poisson equation, charge density:
-   [15_PDEs-2-Students.ipynb]({{site.nbviewer.resources}}/15_PDEs/15_PDEs-2-Students.ipynb) [^2]
+   [15_PDEs-2-Students.ipynb]({{ site.nbviewer.resources }}/15_PDEs/15_PDEs-2-Students.ipynb) [^2]
 3. When plotting arrays of data with
    [matplotlib](https://matplotlib.org), one sooner or later one needs
    to use the
    [`numpy.meshgrid()`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.meshgrid.html)
    function which "returns coordinate matrices from coordinate
    vectors"---most users find this function mystifying. The notebook
-   [meshgrid.ipynb]({{site.nbviewer.resources}}/15_PDEs/meshgrid.ipynb)
+   [meshgrid.ipynb]({{ site.nbviewer.resources }}/15_PDEs/meshgrid.ipynb)
    makes a bit clearer, _what_ `meshgrid` does and why it is useful.
 
 
@@ -119,6 +124,6 @@ with the Gauss-Seidel algorithm.)
 [^2]:
 
      As usual, `git pull` the resources repository
-     [{{site.resources.shortname}}]({{site.resources.url}}) to get a
+     [{{ site.resources.shortname }}]({{ site.resources.url }}) to get a
      local copy of the notebook. Then **copy the notebook and all other
      code into your work directory** in order to complete the exercises.
